<resources>
    <string name="app_name">ProjetoDevAndroid</string>
    <string name="ou">OU</string>
    <string name="porteiro">Porteiro</string>
    <string name="professor">Professor</string>
    <string name="fazer_login_como">Fazer login como:</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string-array name="materias_array">
        <item>Área da Saúde</item>
        <item>Área de Ciências e Tecnologia</item>
        <item>Área de Educação e Humanas</item>
    </string-array>

</resources>