<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/DefaultPosition"
        android:orientation="vertical">

    <ImageView
            android:src="@drawable/logounivc"
            android:layout_width="400dp"
            android:layout_height="150dp"
            android:layout_gravity="center"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/fazer_login_como"
            android:fontFamily="@font/archivo_black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center" />

    <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textSize="15sp"
            android:text="@string/professor"
            android:backgroundTint="@color/darkGreen"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:textStyle="bold" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ou"
            android:textSize="12sp"
            android:textColor="@color/grayA6"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center" />


    <Button
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textSize="15sp"
            android:text="@string/porteiro"
            android:backgroundTint="@color/darkGreen"
            android:textColor="@color/white"
            android:textStyle="bold" />


</LinearLayout>
