<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/DefaultPosition"
        android:orientation="vertical"
        android:padding="16dp">

    <ImageView
            android:src="@drawable/logounivc"
            android:layout_width="400dp"
            android:layout_height="150dp"
            android:layout_gravity="center" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="100dp"
            android:inputType="textPersonName"
            android:autofillHints="name"
            android:hint="@string/usuario"
            android:textColor="@color/black"
            android:background="@drawable/rounded_edittext"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="10dp" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:hint="@string/senha"
            android:textColor="@color/black"
            android:background="@drawable/rounded_edittext"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="10dp" />

    <Button
            android:id="@+id/botao_login"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textSize="15sp"
            android:layout_marginTop="40dp"
            android:text="@string/entrar"
            android:backgroundTint="@color/darkGreen"
            android:gravity="center"
            android:textStyle="bold" />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ainda não possui uma conta?"
                android:textSize="16dp"
                android:textColor="@color/darkGreen" />

        <Button
                android:id="@+id/botao_cadastro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CADASTRE-SE"
                android:textSize="16sp"
                android:textColor="@color/darkGreen"
                android:background="@android:color/transparent"
                android:textStyle="bold"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />
    </LinearLayout>

</LinearLayout>